Revert "Initial port to 1.16 (2.2) (working, but many bugs)"
This reverts commit 0465c5c31e6220ad77685d2dede7052ca2e31b71.